Code Refactor